# understand-video

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  MANIFEST.json  NOTICE  README.md  SANDBOX_CONTRACT.md  SECURITY.md  TEMPO_BASELINE.json  THIRD_PARTY_NOTICES.md  TRACEABILITY.md  UPSTREAM_BASELINE.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
config/: tempo.config.json
demo/: demo.md  video-script.md
docs/: DEVPOST_DELIVERY_PROFILE.md  HACKATHON_DELTA.md  RELEASE_STATUS.md  THIRD_PARTY_LICENSES.md  architecture.md  devpost-video-script.md  judge-path.md  judging-alignment.md  openai-provider.md  test-plan.md
governance/: bootstrap-authorization.json  feature-freeze.json  repository-publication-authorization.json
plan/: business-model.json  charter-proposal.json  decision-brief.json  hypotheses.json  interpreter-mvp-after-tempo.md  interpreter-mvp.md  mvp-charter.json  opportunity.json  readiness-policy.json
schemas/: assessment.schema.json  authorization-warrant.schema.json  business-model.schema.json  commercial-proposal.schema.json  decision-brief.schema.json  evidence.schema.json  hypotheses.schema.json  ledger-event.schema.json  mvp-charter.schema.json  opportunity.schema.json  readiness-policy.schema.json  receipt.schema.json
submission/: ai-usage.json  checklist.md  devpost.json  project-description.md  session.json
tasks/: T-20260717-business-gated-mvp.md  T-20260718-UNDERSTAND-VIDEO-FOUNDER-MVP.json  T-20260718-UNDERSTAND-VIDEO-FOUNDER-MVP.md  T-20260718-understand-video-founder-mvp.json  (+1 more)
tests/: __init__.py  support.py  (+9 more)
(+94 files in other folders)
